# syosetu2ebook

./: Cargo.toml  LICENSE  README.md  syosetu2ebook.py
src/: main.rs
sub_crates/furigana_gen/: Cargo.toml  build.rs
sub_crates/furigana_gen/data/: kanji_frequency.txt
sub_crates/furigana_gen/dictionary/: BSD  NOTICE
sub_crates/furigana_gen/src/: learner.rs  lib.rs
