[package]
name = "syosetu2ebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = "0.9.12"
epub-builder = "0.7.4"
quick-xml = "0.36.1"
regex = "1.10.6"
tempfile = "3.12.0"
ureq = "2.10.1"
furigana_gen = { git = "https://github.com/cessen/furigana_gen.git", branch = "main" }
